azuredeploy.json

{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "AdminPassword": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "VirtualMachineName": {
            "defaultValue": "ubuntu1604vm",
            "type": "String"
        },
        "NetworkCardName": {
            "defaultValue": "myVMNic",
            "type": "String"
        },
        "NetworkSecurityGroupName": {
            "defaultValue": "MyNSG",
            "type": "String"
        },
        "PublicIPName": {
            "defaultValue": "myPublicIP",
            "type": "String"
        },
        "VnetName": {
            "defaultValue": "MyVNET",
            "type": "String"
        },
        "StorageAccount": {
            "defaultValue": "MyStorageAccount",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('VirtualMachineName')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D1"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04.0-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "osdisk",
                        "createOption": "FromImage",
                        "vhd": {
                            "uri": "[concat('http', '://', parameters('StorageAccount'), '.blob.core.windows.net', '/vhds/osdiskforubunu160400.vhd')]"
                        },
                        "caching": "ReadWrite"
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "datadisk1",
                            "createOption": "Empty",
                            "vhd": {
                                "uri": "[concat('http', '://', parameters('StorageAccount'), '.blob.core.windows.net', '/vhds/datadisk1.vhd')]"
                            },
                            "caching": "None",
                            "diskSizeGB": 100
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('VirtualMachineName')]",
                    "adminUsername": "pakue",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('AdminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('NetworkCardNAme'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('StorageAccount'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('NetworkCardName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('NetworkCardName')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('PublicIPName'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('VnetName')), '/subnets/Subnet')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NetworkSecurityGroupName'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('PublicIPName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('VnetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NetworkSecurityGroupName'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('NetworkSecurityGroupName')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "http",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                     }   
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('PublicIPName')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[parameters('VirtualMachineName')]"
                }
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('VnetName')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "Subnet",
                        "properties": {
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[parameters('StorageAccount')]",
            "apiVersion": "2015-06-15",
            "location": "japanwest",
            "tags": {},
            "properties": {
                "accountType": "Standard_LRS"
            },
            "dependsOn": []
        }
    ]
}
